--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,10 @@ aside a {
     margin: 10px;
 }
 
+aside img {
+    border-radius: 5px;
+}
+
 img {
     filter: drop-shadow(5px 5px 5px black);
 }
